# KuiperInfer_rs

./: .gitignore  Cargo.toml  README.md  linear.bias  linear.weight
examples/: test_resnet.rs
src/: lib.rs  status_code.rs
src/data/: mod.rs  tensor.rs  torch_utils.rs
src/layer/: mod.rs
src/layer/abstract_layer/: layer.rs  layer_factory.rs  mod.rs
src/layer/details/: adaptive_avgpooling.rs  convolution.rs  expression.rs  flatten.rs  linear.rs  maxpooling.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/parser/: mod.rs
src/runtime/: mod.rs  runtime_attribute.rs  runtime_datetype.rs  runtime_graph.rs  runtime_operand.rs  runtime_operator.rs  runtime_parameter.rs
src/runtime/pnnx/: graph.rs  mod.rs  parameter.rs  store_zip.rs
tests/: test_runtime_test_param.rs  test_tensor.rs
