[package]
name = "kuiper_infer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
zip = "0.6"
regex = "1.5"
log = "0.4"
env_logger = "0.6.0"
test-log = "0.2.0"
num-traits= "0.2.18"
lazy_static = "1.4.0"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
